Fix table wrap

--- a/varda-rekisterointi/src/frontend/virkailija/RekisterointiListaRivi.module.css
+++ b/varda-rekisterointi/src/frontend/virkailija/RekisterointiListaRivi.module.css
@@ -1,3 +1,7 @@
 span.rivinInfoNappi {
     cursor: pointer;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
